Fix spacing issues

--- a/less/components/_app-header.less
+++ b/less/components/_app-header.less
@@ -4,6 +4,9 @@ header#app-header {
   nav {
     a { flex-basis: auto; }
     button { border-radius: 0; }
-    &:last-child { margin-right: -@padding-small; }
+    .ellipsis-btn { padding: 0 1rem; }
+    &:last-child {
+      margin-right: -@padding-small;
+    }
   }
 }
